<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.imrafaelmerino</groupId>
    <artifactId>javatudes</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0</version>
    <name>javatudes</name>
    <description></description>
    <url>https://github.com/imrafaelmerino/javatudes</url>
    <developers>
        <developer>
            <id>imrafaelmerino</id>
            <name>Rafael Merino García</name>
            <email>imrafael.merino@gmail.com</email>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/imrafaelmerino/javatudes.git</url>
    </scm>
    <properties>
        <NEXUS-STAGING-MAVEN-PLUGIN.VERSION>1.6.12</NEXUS-STAGING-MAVEN-PLUGIN.VERSION>
        <MAVEN-GPG-PLUGIN.VERSION>1.6</MAVEN-GPG-PLUGIN.VERSION>
        <MAVEN-SOURCE-PLUGIN.VERSION>3.0.1</MAVEN-SOURCE-PLUGIN.VERSION>
        <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
        <MAVEN-COMPILER-PLUGIN.VERSION>3.10.1</MAVEN-COMPILER-PLUGIN.VERSION>
        <MAVEN-COMPILER-PLUGIN.SOURCE>21</MAVEN-COMPILER-PLUGIN.SOURCE>
        <MAVEN-COMPILER-PLUGIN.TARGET>21</MAVEN-COMPILER-PLUGIN.TARGET>
        <MAVEN-SUREFIRE-PLUGIN.VERSION>3.0.0-M6</MAVEN-SUREFIRE-PLUGIN.VERSION>
        <MAVEN-JAR-PLUGIN.VERSION>3.2.2</MAVEN-JAR-PLUGIN.VERSION>
        <MAVEN-JAVADOC-PLUGIN.VERSION>3.3.2</MAVEN-JAVADOC-PLUGIN.VERSION>
        <sonar.organization>imrafaelmerino</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.projectKey>imrafaelmerino_java-fun</sonar.projectKey>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.github.imrafaelmerino</groupId>
            <artifactId>java-fun</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>1.0.0-alpha-4</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.dpaukov</groupId>
            <artifactId>combinatoricslib3</artifactId>
            <version>3.3.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${MAVEN-SUREFIRE-PLUGIN.VERSION}</version>
                <configuration>
                    <argLine>--enable-preview </argLine>
                </configuration>
            </plugin>
            <plugin>
                <version>${MAVEN-COMPILER-PLUGIN.VERSION}</version>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${MAVEN-COMPILER-PLUGIN.SOURCE}</source>
                    <target>${MAVEN-COMPILER-PLUGIN.TARGET}</target>
                    <showWarnings>true</showWarnings>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <argLine>--enable-preview </argLine>
                        <arg>-Xlint:all</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${MAVEN-SUREFIRE-PLUGIN.VERSION}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${MAVEN-JAR-PLUGIN.VERSION}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${MAVEN-JAVADOC-PLUGIN.VERSION}</version>
                <configuration>
                    <source>8</source>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
